--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -34,12 +34,16 @@
   flex: 1;
   min-width: 300px;
   max-width: 500px;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 .header-search-bar {
   display: flex;
   width: 100%;
   position: relative;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 .header-search-bar input {
@@ -49,6 +53,8 @@
   border-radius: 24px;
   font-size: 14px;
   outline: none;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 .header-search-button {
@@ -59,6 +65,8 @@
   background: none;
   border: none;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 
@@ -95,6 +103,7 @@
 .header-menu-button {
   display: flex;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
   padding: 8px 18px;
   background-color: #f1f3f4;
   color: rgb(20, 16, 16);
@@ -292,6 +301,8 @@
     width: 100%;
     min-width: 100%;
     margin-top: 10px;
+    font-family: 'Montserrat', sans-serif;
+
   }
 
   .header-user-actions {
@@ -332,5 +343,7 @@
   .header-search-bar input {
     padding: 8px 12px;
     font-size: 13px;
+    font-family: 'Montserrat', sans-serif;
+
   }
 }
