--- a/frontend/src/components/Header/LoginModal.css
+++ b/frontend/src/components/Header/LoginModal.css
@@ -70,7 +70,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4285f4;
+    background-color: #0c6546;
     color: white;
     border: none;
     border-radius: 8px;
@@ -92,7 +92,7 @@
   .text-link {
     background: none;
     border: none;
-    color: #4285f4;
+    color: #4e9a5e;
     cursor: pointer;
     padding: 0 0 0 5px;
     font-size: 14px;
@@ -125,7 +125,7 @@
   }
   
   .submit-button:hover {
-    background-color: #3367d6;
+    background-color: #4e9a5e;
   }
   
   .text-link:hover {
