--- a/frontend/src/components/Header/SIgnupModal.css
+++ b/frontend/src/components/Header/SIgnupModal.css
@@ -86,7 +86,7 @@
   }
   
   .submit-button {
-    background-color: #4285f4;
+    background-color: #0c6546;
     color: white;
     border: none;
     border-radius: 8px;
@@ -99,7 +99,7 @@
   }
   
   .submit-button:hover {
-    background-color: #3367d6;
+    background-color: #4e9a5e;
   }
   
   .login-link {
@@ -112,7 +112,7 @@
   .text-link {
     background: none;
     border: none;
-    color: #4285f4;
+    color: #4e9a5e;
     cursor: pointer;
     padding: 0;
     font-size: 14px;
